--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <string name="app_name">SnippetViewer</string>
+    <string name="progress_message">Loading &#8230;</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    
+    <string name="snippet_image_content_description">Some image</string>
 
 </resources>
