Improved layout of row image

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="msg_failed_to_load_data">Failed to load data!</string>
     
-    <string name="snippet_image_content_description">Some image</string>
+    <string name="snippet_image_content_description">Image for the row</string>
+    <string name="snippet_arrow_image_content_description">Right arrow image</string>
     
     <string name="default_data_url">https://www.dropbox.com/s/g41ldl6t0afw9dv/facts.json?dl=1</string>
     <string name="preference_key_url">prefDataURL</string>
